--- a/scss/_topONE.scss
+++ b/scss/_topONE.scss
@@ -8,20 +8,28 @@
   }
 
   @include breakPoints(mobile) {
-    height: 44em;
+    height: 38em;
   }
 
-  @media (orientation: landscape) {
-    // height: 14em;
-
-    @include breakPoints(small) {
-      height: 42em;
-    }
-
-    @include breakPoints(mobile) {
-      height: 38em;
-    }
+  @media (min-width: 399px) and (max-width: 443.99px) {
+    height: 43em;
   }
+
+  // @media (orientation: landscape) {
+  //   // height: 14em;
+
+  //   @include breakPoints(small) {
+  //     height: 42em;
+  //   }
+
+  //   @include breakPoints(mobile) {
+  //     height: 38em;
+  //   }
+
+  //   @media (min-width: 399px) and (max-width: 443.99px) {
+  //     height: 43em;
+  //   }
+  // }
 
   #bgONE {
     position: absolute;
@@ -305,7 +313,6 @@
 
       @include breakPoints(mobile) {
         width: min(100% - 4em, 30em);
-        // width: 33em;
         margin-top: 2em;
         font-size: 13px;
       }
