--- a/css/main.css
+++ b/css/main.css
@@ -979,6 +979,11 @@
     height: 23em;
   }
 }
+@media (min-width: 1350px) {
+  #topTHREE #right #pic {
+    margin-right: 4em;
+  }
+}
 #topTHREE #right #pic #one {
   position: absolute;
   top: 0;
@@ -1030,7 +1035,7 @@
 #midONE #one {
   width: min(100% - 4em, 50em);
   height: 17em;
-  margin-top: 5em;
+  margin-top: 5.5em;
   font-size: 17px;
   font-weight: 700;
   background-image: url("../images/leafsANDBEANS.png");
@@ -1133,8 +1138,21 @@
   filter: brightness(70%);
   transform: rotateZ(20deg);
 }
+@media (min-width: 310px) and (max-width: 767px) {
+  #midONE #allinone #FIRST #wheelONE #pic:hover #AG {
+    filter: brightness(100%);
+    transform: none;
+    cursor: default;
+  }
+}
 #midONE #allinone #FIRST #wheelONE #pic:hover #two {
   padding: 22px 27px;
+}
+@media (min-width: 310px) and (max-width: 767px) {
+  #midONE #allinone #FIRST #wheelONE #pic:hover #two {
+    padding: 25px 30px;
+    cursor: default;
+  }
 }
 #midONE #allinone #FIRST #wheelONE #pic #AG {
   background-image: url("../images/coffeeONE.jpg");
@@ -1220,8 +1238,21 @@
   filter: brightness(70%);
   transform: rotateZ(20deg);
 }
+@media (min-width: 310px) and (max-width: 767px) {
+  #midONE #allinone #FIRST #wheelTWO #pic:hover #AG {
+    filter: brightness(100%);
+    transform: none;
+    cursor: default;
+  }
+}
 #midONE #allinone #FIRST #wheelTWO #pic:hover #two {
   padding: 22px 27px;
+}
+@media (min-width: 310px) and (max-width: 767px) {
+  #midONE #allinone #FIRST #wheelTWO #pic:hover #two {
+    padding: 25px 30px;
+    cursor: default;
+  }
 }
 #midONE #allinone #FIRST #wheelTWO #pic #AG {
   background-image: url("../images/coffeeTWO.jpg");
@@ -1325,8 +1356,21 @@
   filter: brightness(70%);
   transform: rotateZ(20deg);
 }
+@media (min-width: 310px) and (max-width: 767px) {
+  #midONE #allinone #SECOND #wheelTHREE #pic:hover #AG {
+    filter: brightness(100%);
+    transform: none;
+    cursor: default;
+  }
+}
 #midONE #allinone #SECOND #wheelTHREE #pic:hover #two {
   padding: 22px 27px;
+}
+@media (min-width: 310px) and (max-width: 767px) {
+  #midONE #allinone #SECOND #wheelTHREE #pic:hover #two {
+    padding: 25px 30px;
+    cursor: default;
+  }
 }
 #midONE #allinone #SECOND #wheelTHREE #pic #AG {
   background-image: url("../images/coffeeTHREE.jpg");
@@ -1411,8 +1455,21 @@
   filter: brightness(70%);
   transform: rotateZ(20deg);
 }
+@media (min-width: 310px) and (max-width: 767px) {
+  #midONE #allinone #SECOND #wheelFOUR #pic:hover #AG {
+    filter: brightness(100%);
+    transform: none;
+    cursor: default;
+  }
+}
 #midONE #allinone #SECOND #wheelFOUR #pic:hover #two {
   padding: 22px 27px;
+}
+@media (min-width: 310px) and (max-width: 767px) {
+  #midONE #allinone #SECOND #wheelFOUR #pic:hover #two {
+    padding: 25px 30px;
+    cursor: default;
+  }
 }
 #midONE #allinone #SECOND #wheelFOUR #pic #AG {
   background-image: url("../images/coffeeFOUR.jpg");
@@ -1498,6 +1555,7 @@
   bottom: -2em;
   left: 10em;
   background-image: url("../images/stamp.png");
+  background-repeat: no-repeat;
 }
 #midTWO #bgs #bgTWO {
   width: 33.333%;
@@ -1512,7 +1570,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 26em;
+    height: 28em;
     align-items: center;
     background-repeat: no-repeat;
     background-position: 50%;
@@ -1524,7 +1582,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 29em;
+    height: 30.5em;
     align-items: center;
     background-repeat: no-repeat;
     background-position: 50%;
@@ -1536,7 +1594,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 30em;
+    height: 32em;
     align-items: center;
     background-repeat: no-repeat;
     background-position: 50%;
@@ -2212,11 +2270,6 @@
 @media (min-width: 767px) and (max-width: 1023px) {
   #midFOUR #bg {
     background-position-x: 30%;
-  }
-}
-@media (min-width: 613px) {
-  #midFOUR #bg {
-    height: 38em;
   }
 }
 #midFOUR #one {
