--- a/scss/_midFOUR.scss
+++ b/scss/_midFOUR.scss
@@ -32,9 +32,9 @@
       background-position-x: 30%;
     }
 
-    @media (min-width: 613px) {
-      height: 38em;
-    }
+    // @media (min-width: 613px) {
+    //   height: 38em;
+    // }
   }
 
   #one {
