--- a/scss/_midTWO.scss
+++ b/scss/_midTWO.scss
@@ -33,6 +33,7 @@
         bottom: -2em;
         left: 10em;
         background-image: url('../images/stamp.png');
+        background-repeat: no-repeat;
       }
     }
 
@@ -48,7 +49,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 26em;
+        height: 28em;
         align-items: center;
         background-repeat: no-repeat;
         background-position: 50%;
@@ -59,7 +60,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 29em;
+        height: 30.5em;
         align-items: center;
         background-repeat: no-repeat;
         background-position: 50%;
@@ -70,7 +71,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 30em;
+        height: 32em;
         align-items: center;
         background-repeat: no-repeat;
         background-position: 50%;
