--- a/scss/_bottomONE.scss
+++ b/scss/_bottomONE.scss
@@ -22,6 +22,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    filter: brightness(60%);
     opacity: 0.6;
     z-index: -1;
   }
