--- a/css/main.css
+++ b/css/main.css
@@ -2237,8 +2237,9 @@
 #midFOUR {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: inherit;
-  height: 40em;
+  height: 28em;
   align-items: center;
 }
 @media (min-width: 613px) {
@@ -2248,7 +2249,7 @@
 }
 #midFOUR #bg {
   width: 100%;
-  height: 40em;
+  height: inherit;
   position: absolute;
   background-image: url("../images/thumbnailCOFFEE.jpg");
   filter: brightness(35%);
@@ -2274,7 +2275,6 @@
 }
 #midFOUR #one {
   width: min(100% - 2em, 12em);
-  margin-top: 3em;
   font-size: 60px;
   color: rgb(77, 139, 85);
   font-weight: 700;
@@ -2283,7 +2283,7 @@
 }
 @media (min-width: 310px) and (max-width: 357px) {
   #midFOUR #one {
-    font-size: 52px;
+    font-size: 46px;
   }
 }
 #midFOUR #play {
@@ -2300,7 +2300,10 @@
 }
 @media (min-width: 310px) and (max-width: 399px) {
   #midFOUR #play {
-    margin-left: 0;
+    margin: 3em 0 0 0;
+    width: 16em;
+    height: 3.2em;
+    font-size: 12px;
   }
 }
 @media (min-width: 399px) and (max-width: 767px) {
@@ -2519,14 +2522,29 @@
   height: fit-content;
   position: relative;
   background-color: rgb(255, 255, 255);
+  overflow: hidden;
 }
 #bottomTWO #bg {
   background-image: url("../images/croissant.png");
-  width: 30em;
-  height: 42em;
+  width: 100%;
+  height: 50em;
   position: absolute;
   margin: 2em;
-  background-repeat: no-repeat;
+  background-size: contain;
+}
+@media (min-width: 310px) and (max-width: 399px) {
+  #bottomTWO #bg {
+    width: inherit;
+    height: 280em;
+    background-repeat: unset;
+  }
+}
+@media (min-width: 399px) and (max-width: 767px) {
+  #bottomTWO #bg {
+    width: inherit;
+    height: 245em;
+    background-repeat: unset;
+  }
 }
 #bottomTWO #title {
   display: flex;
