--- a/scss/_bottomTHREE.scss
+++ b/scss/_bottomTHREE.scss
@@ -162,7 +162,7 @@
           margin-top: 3em;
 
           #pic {
-            background-image: url('../images/location.svg');
+            background-image: url('../images/call.svg');
             width: 27px;
             height: 27px;
           }
@@ -202,7 +202,7 @@
           display: flex;
           flex-direction: row;
           width: 32em;
-          margin-top: 2em;
+          margin-top: 3em;
           position: relative;
           align-items: center;
 
@@ -217,10 +217,10 @@
 
           #subscribe {
             width: 13em;
-            height: 4.2em;
+            height: 3.8em;
             margin-left: 1em;
             position: absolute;
-            right: 10em;
+            right: 9em;
             border: none;
             border-radius: 40px;
             background-color: rgb(123, 255, 141);
@@ -233,10 +233,18 @@
               background-color: rgb(109, 223, 124);
             }
 
-            @media (min-width: 310px) and (max-width: 399.9px) {
-              width: 10em;
-              right: 14em;
+            @media (min-width: 310px) and (max-width: 399px) {
+              width: 11em;
+              right: 12em;
               margin-left: 0;
+            }
+
+            @media (min-width: 310px) and (max-width: 350px) {
+              right: 15em;
+            }
+
+            @media (min-width: 399px) and (max-width: 470px) {
+              right: 10em;
             }
 
             @include breakPoints(mobile) {
@@ -263,7 +271,7 @@
             @media (min-width: 310px) and (max-width: 420px) {
               width: 60%;
               margin-left: 1.5em;
-              font-size: 14px;
+              font-size: 13px;
             }
           }
         }
